Bug 368009 - Not possible to add diagrams in subfolder
Summary: Not possible to add diagrams in subfolder
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.19.2 (KDE Applications 16.04.2)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-30 13:49 UTC by Ralf Habacker
Modified: 2016-08-31 06:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.1 (KDE Applications 16.08.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-08-30 13:49:40 UTC
With recent versions it is not possible to add diagrams to sub folder. new diagrams are always added to the related top level folder.


Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. create new folder in tree view
3. right click on folder and select 'new' -> 'class diagram'


Actual Results:  
The class diagram is always added to the logical view.


Expected Results:  
The class diagram should be added to the related subfolder.


A workaround is to move the diagram after creation into the related sub folder.
Comment 1 Ralf Habacker 2016-08-31 06:25:53 UTC
Git commit f0ac748e407622f51649adb4fb3117eefb05c3c1 by Ralf Habacker.
Committed on 31/08/2016 at 06:20.
Pushed by habacker into branch 'Applications/16.08'.

Fix 'Not possible to add diagrams in subfolder'.
FIXED-IN:2.20.1 (KDE Applications 16.08.1)

Signed-off-by: Ralf Habacker <ralf.habacker@freenet.de>

M  +4    -3    umbrello/cmds/cmd_createDiagram.cpp
M  +3    -1    umbrello/cmds/cmd_createDiagram.h
M  +18   -18   umbrello/listpopupmenu.cpp
M  +48   -0    umbrello/umllistview.cpp

http://commits.kde.org/umbrello/f0ac748e407622f51649adb4fb3117eefb05c3c1