Fix 'Not possible to add diagrams in subfolder'.

BUG:368009
FIXED-IN:2.20.1 (KDE Applications 16.08.1)

Signed-off-by: Ralf Habacker <ralf.habacker@freenet.de>